# BinanceTrade

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: research_workflow.md  runtime_operations.md  strategy_catalog.md
examples/runtime/: global_spot_core.toml  global_spot_ema_btcusdt.toml  global_spot_ema_ethusdt.toml  spot_ema_btcusdt.toml  spot_ema_ethusdt.toml  spot_us_core.toml
examples/strategies/: spot_builtin_persistent.py  spot_ema_persistent.py  spot_mean_reversion.py
src/binance_trade/: __init__.py  builtin_strategies.py  cli.py  config.py  daemon.py  dashboard.py  exceptions.py  filters.py  futures_rest.py  futures_ws_user.py  logging_utils.py  presets.py  research.py  research_report.py  rest.py  risk.py  runtime_profiles.py  service.py  signing.py  state.py  strategy.py  strategy_runtime.py  types.py  utils.py  ws_market.py  ws_user.py
tests/: test_builtin_strategies.py  test_config.py  test_daemon.py  test_dashboard.py  test_exceptions.py  test_filters.py  test_portfolio.py  test_presets.py  test_reconcile.py  test_research.py  test_research_report.py  test_rest_retry.py  test_risk.py  test_runtime_profiles.py  test_signing.py  test_strategy_runtime.py  test_walkforward.py  test_walkforward_report.py
