[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binance-trade"
version = "0.1.0"
description = "Professional Binance Spot trading starter with REST, market streams, user streams, risk checks, and state persistence."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "cryptography>=44,<46",
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "typer>=0.12,<1",
  "websockets>=13,<16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
]

[project.scripts]
binance-trade = "binance_trade.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
